--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site is created by Manpreet Singh. It uses data from mapbox.com and darksky.net!.</p>
             <img class="potrait" src="img/robot.png">
         </div>
         {{>footer}}
